side-navのレイアウトとitem.htmlの更新

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </form>
                 </div>
                 <div class="pagelink">
-                    <h3>
+                    <h3 class="pagelink">
                     <a href="#"><img src="./images/top/pagelink.png" alt="ページリンク"></a>
                     </h3>
                 </div>
