全ページPC版済み(itemページのjavascriptを除く)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div><img src="./images/top/ca_banner.jpg" alt="写真"></div>
                 </div>
             
-                <section id="new-items">
+                <section id="mitamono">
                     <h2 class="items">
                         <a href="#"><img src="./images/top/title_newitems.png" alt="新商品"></a>
                     </h2>
@@ -72,7 +72,7 @@
                     </ul>
                     </section>
                 </section>
-                <section id="poplar-items">
+                <section id="mitamono">
                     <h2 class="items">
                         <a href="#"><img src="./images/top/title_popular.png" alt="売れ筋商品"></a>
                     </h2>
@@ -86,8 +86,7 @@
                     <li class="itembox"><a href="#"><img src="./images/top/item_12.jpg" alt="item 12"><p>商品名が入ります。商品名が入ります。<br>商品名が入ります。</p><p class="en">&yen;1,000(tax in)</p></a></li>
                     </ul>
                     </section>
-                </se
-                    ction>
+                </section>
                 
                 <section id="guide">    
                     <h2 class="shopping-guide">
