レスポンシブ途中２

--- a/index.html
+++ b/index.html
@@ -45,16 +45,20 @@
                         <li class="last-list"><a href=""><img src="./images/top/insta.png" alt="インスタグラム"></a></li>
                     </ul>
                     <ul class="sp_nav">
-                        <li>インスタ</li>
-                        <li>フェイスブック</li>
-                        <li>ハンバーガーメニュー</li>
+                        <li><a href=""><img src="./images/top_sp/insta.png" alt="インスタグラム"></a></li>
+                        <li><a href=""><img src="./images/top_sp/fb.png" alt="フェイスブック"></a></li>
+                        <li><a href=""><img src="./images/top_sp/menu_icon.png" alt="ハンバーガーメニュー"></a></li>
                     </ul>
+                    
+     <!--––––––––––––––––––––––––––––––––––––––––––––
                     <div id="ham-menu">
                         <p>項目1</p>
                         <p>項目2</p>
                         <p>項目3</p>
                         <p>項目4</p>
                     </div>
+    ––––––------------------------------------------->
+    
                 </nav>
             </div>
         </header>
@@ -71,6 +75,9 @@
                     <h2 class="items">
                         <a href="#"><img src="./images/top/title_newitems.png" alt="新商品"></a>
                     </h2>
+                    <h2 class="sp_items">
+                        <a href="#"><img src="./images/top_sp/title_new_item.png" alt="新商品"></a>
+                    </h2>
                     <section class="item-box">
                     <ul>
                         <li class="itembox"><a href="#"><img src="./images/top/item_01.jpg" alt="item 01"><p>商品名が入ります。商品名が入ります。<br>商品名が入ります。</p><p class="en">&yen;1,000(tax in)</p></a></li>
@@ -85,6 +92,9 @@
                 <section id="mitamono">
                     <h2 class="items">
                         <a href="#"><img src="./images/top/title_popular.png" alt="売れ筋商品"></a>
+                    </h2>
+                    <h2 class="sp_items">
+                        <a href="#"><img src="./images/top_sp/title_popular.png" alt="売れ筋商品"></a>
                     </h2>
                     <section class="item-box">
                     <ul>
@@ -101,6 +111,9 @@
                 <section id="guide">    
                     <h2 class="shopping-guide">
                         <a href="#"><img src="./images/top/title_guide.png" alt="ショッピングガイド"></a>
+                    </h2>
+                    <h2 class="sp_shopping-guide">
+                        <a href="#"><img src="./images/top_sp/title_guide.png" alt="ショッピングガイド"></a>
                     </h2>
                     <section class="shopping-guide">
                         <div class="guide">
