10/21現在　toppageレスポンシブ途中

--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
             <section id="page-top">
                         <a href="#"><img src="./images/top/pagetop.png" alt="ページトップへ"></a>
                     </section>
+            <section id="sp_page-top">
+                        <a href="#"><img src="./images/top/pagetop.png" alt="ページトップへ"></a>
+                    </section>
                 <div class="nav">
                     <ul>
                     <li><a href="#">特定商取引に基づく表記</a></li>
