10/28 レスポンシブ

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <div class="shop-foto">
                     <img class="shopfoto" src="./images/top/about_img.jpg" alt="お店の写真">
                     <p>お店の説明お店の説明お店の説明がはいりますお店の説明お店の説明お店の説明</p>
-                    <a href="#"><img src="./images/top/more_btn.png" alt="その他ボタン"></a>
+                    <a href="#"><img class="btn1" src="./images/top/more_btn.png" alt="その他ボタン"></a>
                     </div>
                 </div>
                 <div class="about2">    
@@ -180,7 +180,7 @@
                         <div class="shop-foto">
                     <img class="shopfoto" src="./images/top/shopinfo_img.jpg" alt="お店の写真">
                     <p>お店の説明お店の説明お店の説明がはいりますお店の説明お店の説明お店の説明</p>
-                    <a href="#"><img src="./images/top/more_btn.png" alt="お店の写真"></a>
+                    <a href="#"><img class="btn2" src="./images/top/more_btn.png" alt="その他ボタン"></a>
                         </div>
                 </div>
             </nav>
