10/31 課題再提出:ラジオボタン

--- a/item.html
+++ b/item.html
@@ -167,8 +167,8 @@
                      </tbody>
                       <tr>
                         <td>サイズ</td>
-                        <td><input type="text"></td>
-                        <td><input type="text"></td>
+                        <td><input type="radio" name="choice" value="color1" checked="checked"></td>
+                        <td><input type="radio" name="choice" value="color1"></td>
                       </tr>
                       </tbody>
                     </table>
